fix: overflow-y

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -4,6 +4,7 @@
   margin: auto;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 main {
